--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ serde = "1.0.118"
 serde_derive = "1.0.118"
 serde-big-array = "0.3.0"
 structopt = "0.3.21"
+
+[dev-dependencies]
+memoffset = "0.6"
