--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,7 @@ edition = "2018"
 
 [dependencies]
 bincode = "1.3.1"
-serde = "1.0.118"
-serde_derive = "1.0.118"
+serde = { version = "1.0.118", features = ["derive"] }
 serde-big-array = "0.3.0"
 structopt = "0.3.21"
 
